add test suite & update related configs